# mlcat

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
examples/: gan.py  mnist_classifier.py
src/mlcat/: categories.py  data.py  morphisms.py  objects.py
tests/: conftest.py  test_categories.py  test_morphisms.py  test_objects.py
